# HSE_Distributed_Computing_Lab2_MPI

./: .gitignore  CMakeLists.txt  README.md
src/: task_1.c  task_1.h  task_2.c  task_2.h  task_3.c  task_3.h  testing.py  testing_2.py
